# genome-api

./: .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  docker-compose.yml  genome-api.cabal  stack.yaml
app/: Main.hs
deploy/: persons.json  run_tests.sh
neo4j/: clean_data.sh  constraints.cypher  init_db.sh  starterData.cypher
nginx/: nginx.conf
src/: Api.hs  GraphTypes.hs  Server.hs  ServerState.hs  Utils.hs
src/Api/: MicroService.hs  Person.hs  Team.hs
src/Models/: MicroService.hs  Person.hs  Team.hs
test/: PersonSpec.hs
