name:                genome-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dmateusp/genome-api#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Mateus Pires
maintainer:          dmateusp@gmail.com
copyright:           2017 Daniel Mateus Pires
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api.Person
                     , Api.MicroService
                     , Api.Team
                     , Server
                     , ServerState
                     , Logger
                     , Utils
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , mtl
                     , servant-server
                     , wai
                     , warp
                     , hasbolt
                     , text
                     , containers
                     , transformers
                     , resource-pool
                     , data-default
                     , monad-logger
                     , bytestring
                     , wai-extra
                     , katip
                     , fast-logger
                     , wai-middleware-metrics
                     , monad-metrics
                     , persistent-postgresql
  default-language:    Haskell2010

executable genome-api
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , genome-api
                     , monad-metrics
                     , ekg-core
                     , warp
                     , wai-middleware-metrics
                     , microlens
                     , ekg
                     , safe
  default-language:    Haskell2010

test-suite genome-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , genome-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dmateusp/genome-api
